# CollatzRust

./: Cargo.toml  README.md
data/: iter_1_output.json
src/: main.rs
